Fix collapse animation to blog & portfolio

--- a/src/components/blog/blog.scss
+++ b/src/components/blog/blog.scss
@@ -1,11 +1,11 @@
-@import '../../assets/style.scss';
+@import '../../assets/style';
 
 [id=blog] {
   &:hover > .title i {
     animation: turn-y 2s linear infinite reverse;
   }
 
-  .collapse {
+  .collapse[open] {
     & > figure {
       animation: slide-top 500ms ease-in-out;
     }
